--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,28 @@
-*{font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif}
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #3485bb;
+}
 
+/* header navbar flexbox */
 header{
     display: flex;
     align-content: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    background-color: white;
     border-style: solid;
     border-width: 0px 0px 1px 0px;
     border-color: #003380;
 }
 
+/* logo container */
 .logo{
     max-width: 100%;
     height: auto;
     margin: 0 0 5px 0;
 }
 
+/* nav bar container */
 ul.navbar{
     display: flex;
     align-content: center;
@@ -25,18 +32,67 @@ ul.navbar{
     margin: 0;
 }
 
+/* buttons for the nav bar */
 li.navbutton a{
     text-decoration: none;
     padding: 0.5em;
     color: #003380;
 }
 
+/* nav bar hover display */
 li.navbutton a:hover{
     color: #3485bb;
     font-weight: bold;
 }
 
+/* nav bar active display */
 .navbutton .active{
     font-weight: bold;
 }
+
+/* column setup */
+.leftcolumn{
+    float: left;
+    width: 75%;
+}
+
+/* column setup + divider line */
+.rightcolumn{
+    float: left;
+    width: 25%;
+    padding-left: 10px;
+    border-style: solid;
+    border-left-width: 1px;
+    border-color: #003380;
+}
+
+/* clearing columns at end of page */
+.body:after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* display sections */
+.section{
+    background-color: white;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+/* image formatting in column section */
+.sectionimg{
+    width: 100%;
+    height: auto;
+    padding: 10px;
+}
+
+/* reponsive layout for small screens */
+@media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {   
+      width: 100%;
+      padding: 0;
+      border-style: none;
+    }
+  }
 
