--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 *{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #3485bb;
+    box-sizing: border-box;
+    margin: 0;
 }
 
 /* header navbar flexbox */
@@ -12,14 +13,20 @@ header{
     background-color: white;
     border-style: solid;
     border-width: 0px 0px 1px 0px;
+    padding: 2px 0 0 2px;
     border-color: #003380;
 }
 
 /* logo container */
-.logo{
+.logo a{
     max-width: 100%;
     height: auto;
     margin: 0 0 5px 0;
+    text-decoration: none;
+    color: #003380;
+}
+.logo a:hover{
+    color: #3485bb;
 }
 
 /* nav bar container */
@@ -29,18 +36,17 @@ ul.navbar{
     list-style-type: none;
     overflow: hidden;
     flex-wrap: wrap;
-    margin: 0;
 }
 
 /* buttons for the nav bar */
-li.navbutton a{
+.navbutton a{
     text-decoration: none;
     padding: 0.5em;
     color: #003380;
 }
 
 /* nav bar hover display */
-li.navbutton a:hover{
+.navbutton a:hover{
     color: #3485bb;
     font-weight: bold;
 }
@@ -54,30 +60,25 @@ li.navbutton a:hover{
 .leftcolumn{
     float: left;
     width: 75%;
+    text-align: center;
+    border-style: solid;
+    border-color: #003380;
+    border-width: 0 1px 0 0;
 }
 
 /* column setup + divider line */
 .rightcolumn{
     float: left;
     width: 25%;
-    padding-left: 10px;
-    border-style: solid;
-    border-left-width: 1px;
-    border-color: #003380;
-}
-
-/* clearing columns at end of page */
-.body:after{
-    content: "";
-    display: table;
-    clear: both;
 }
 
 /* display sections */
 .section{
-    background-color: white;
+    background-color: #3485bb;
+    color: white;
+    text-align: left;
     padding: 10px;
-    margin-top: 10px;
+    margin: 10px;
 }
 
 /* image formatting in column section */
@@ -87,9 +88,23 @@ li.navbutton a:hover{
     padding: 10px;
 }
 
+/* clearing columns at end of page */
+.form:after{
+    content:"";
+    display: table;
+    clear: both;
+}
+
+.footer{
+    width: 100%;
+    border-style: solid;
+    border-width: 1px 0 0 0;
+    border-color: #003380;
+}
+
 /* reponsive layout for small screens */
-@media screen and (max-width: 800px) {
-    .leftcolumn, .rightcolumn {   
+@media screen and (max-width: 1000px) {
+    .leftcolumn, .rightcolumn{   
       width: 100%;
       padding: 0;
       border-style: none;
