added some images

--- a/css/main.css
+++ b/css/main.css
@@ -83,8 +83,8 @@ ul.navbar{
 
 /* image formatting in column section */
 .sectionimg{
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 300px;
     padding: 10px;
 }
 
